# advreajuste

./: .dockerignore  .env.example  Caddyfile  DEPLOY.md  Dockerfile  README.md  README_VPS.md  compose.ip.yaml  compose.yaml  pyproject.toml  requirements.txt  setup_ubuntu.sh  streamlit_app.py
.streamlit/: config.toml  secrets.toml.example
data/indices/: IGP-M.parquet  INPC.parquet  IPCA-E.parquet  IPCA.parquet  SELIC.parquet
docs/: clausula_honorarios.md  distribuicao.md  politica_retencao.md
src/advreajuste/: cli.py  config.py  logging_setup.py  pipeline.py
src/advreajuste/calculators/: __init__.py  ans.py  correcao.py  correcao_monetaria.py  decimal_config.py  diferencial.py  faixa_etaria.py  indices.py  substituicao.py
src/advreajuste/custody/: __init__.py  audit_log.py  hashing.py
src/advreajuste/extractors/: __init__.py  excel_input.py  generico.py  hybrid.py  ocr.py  pdf_template.py  pdf_vision.py  router_extracao.py  schemas.py  text_extraction.py  universal.py  vision_fallback.py
src/advreajuste/extractors/parsers/: __init__.py  _common.py  _generic.py  amil.py  amil_analitico.py  bradesco.py  cassi.py  hapvida.py  porto_seguro.py  qualicorp.py  router.py  sulamerica.py  sulamerica_pme.py  unimed.py
src/advreajuste/llm/: __init__.py  client.py  gemini_client.py  vision.py
src/advreajuste/llm/prompts/: extracao_boleto.md  minuta_peticao.md
src/advreajuste/ui/: streamlit_app.py
src/advreajuste/writers/: __init__.py  peticao.py  xlsx.py  xlsx_template.py
templates/: planilha_modelo_mentorando.xlsx
