[project]
name = "advreajuste"
version = "0.1.0"
description = "Pipeline auditável de cálculo de reajuste abusivo de planos de saúde (STJ Tema 1016 / RN 563-565/2022)"
authors = [{ name = "Laura Zandavalle", email = "laurazandavalle.adv@gmail.com" }]
requires-python = ">=3.12"
readme = "README.md"
license = { text = "Proprietary" }

dependencies = [
    "typer>=0.15",
    "rich>=13.7",
    "loguru>=0.7",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "python-dateutil>=2.9",
    "pandas>=2.2",
    "python-calamine>=0.2",
    "openpyxl>=3.1.5",
    "python-docx>=1.1",
    "docxtpl>=0.19",
    "pdfplumber>=0.11.4",
    "pymupdf>=1.24",
    "pypdf>=5.0",
    "requests>=2.32",
    "requests-cache>=1.2",
    "beautifulsoup4>=4.12",
    "lxml>=5.2",
    "python-bcb>=0.3",
    "brutils>=2.0",
    "validate-docbr>=1.10",
    "anthropic>=0.40",
    "instructor>=1.6",
    "google-genai>=1.73",
    "streamlit>=1.40",
    "holidays>=0.57",
    "numpy-financial>=1.0",
]

[project.optional-dependencies]
ocr = ["pytesseract>=0.3.13", "opencv-python>=4.10", "pdf2image>=1.17", "numpy>=1.26"]
dev = ["pytest>=8", "pytest-xdist>=3.6", "hypothesis>=6.112", "syrupy>=4.7", "ruff>=0.7", "mypy>=1.11"]

[project.scripts]
advreajuste = "advreajuste.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/advreajuste"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "N"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers"
testpaths = ["tests"]
markers = ["integration: marca testes de integração", "property: hypothesis"]
